--- a/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/NuevoPaciente.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClinicaWebApp.Models.Usuario.Paciente.Paciente
+﻿@model ClinicaWebApp.Models.Usuario.Paciente.PacienteO
 
 @{
     ViewData["Title"] = "NuevoPaciente";
@@ -7,46 +7,61 @@
 
 <h1>NuevoPaciente</h1>
 
-<h4>Paciente</h4>
+<h4>PacienteO</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="NuevoPaciente">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdPaciente" class="control-label"></label>
-                <input asp-for="IdPaciente" class="form-control" />
-                <span asp-validation-for="IdPaciente" class="text-danger"></span>
+                <label asp-for="ide_pac" class="control-label"></label>
+                <input asp-for="ide_pac" class="form-control" />
+                <span asp-validation-for="ide_pac" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NombreUsuario" class="control-label"></label>
-                <input asp-for="NombreUsuario" class="form-control" />
-                <span asp-validation-for="NombreUsuario" class="text-danger"></span>
+                <label asp-for="ide_usr" class="control-label"></label>
+                <input asp-for="ide_usr" class="form-control" />
+                <span asp-validation-for="ide_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ApellidoUsuario" class="control-label"></label>
-                <input asp-for="ApellidoUsuario" class="form-control" />
-                <span asp-validation-for="ApellidoUsuario" class="text-danger"></span>
+                <label asp-for="cor_usr" class="control-label"></label>
+                <input asp-for="cor_usr" class="form-control" />
+                <span asp-validation-for="cor_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaNacimiento" class="control-label"></label>
-                <input asp-for="FechaNacimiento" class="form-control" />
-                <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
+                <label asp-for="pwd_usr" class="control-label"></label>
+                <input asp-for="pwd_usr" class="form-control" />
+                <span asp-validation-for="pwd_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipoDocumento" class="control-label"></label>
-                <input asp-for="TipoDocumento" class="form-control" />
-                <span asp-validation-for="TipoDocumento" class="text-danger"></span>
+                <label asp-for="nom_usr" class="control-label"></label>
+                <input asp-for="nom_usr" class="form-control" />
+                <span asp-validation-for="nom_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NumeroDocumento" class="control-label"></label>
-                <input asp-for="NumeroDocumento" class="form-control" />
-                <span asp-validation-for="NumeroDocumento" class="text-danger"></span>
+                <label asp-for="ape_usr" class="control-label"></label>
+                <input asp-for="ape_usr" class="form-control" />
+                <span asp-validation-for="ape_usr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Rol" class="control-label"></label>
-                <input asp-for="Rol" class="form-control" />
-                <span asp-validation-for="Rol" class="text-danger"></span>
+                <label asp-for="fna_usr" class="control-label"></label>
+                <input asp-for="fna_usr" class="form-control" />
+                <span asp-validation-for="fna_usr" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="num_doc" class="control-label"></label>
+                <input asp-for="num_doc" class="form-control" />
+                <span asp-validation-for="num_doc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ide_doc" class="control-label"></label>
+                <input asp-for="ide_doc" class="form-control" />
+                <span asp-validation-for="ide_doc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ide_rol" class="control-label"></label>
+                <input asp-for="ide_rol" class="form-control" />
+                <span asp-validation-for="ide_rol" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
