Implementacion de las vistas medico, recepcionista, paciente y login

--- a/ClinicaWebApp/Views/Cita/Index.cshtml
+++ b/ClinicaWebApp/Views/Cita/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_LayoutPrincipal.cshtml";
+    Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Index Recepcionista</h1>
 
