se asigno correctamente los recursos personalizado para cada usuario al iniciar sesion

--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -47,7 +47,7 @@
             id="accordionSidebar">
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center"
-               href="@Url.Action("Index","Cita")">
+               href="@Url.Action("Index","Recepcionista")">
                 <div class="sidebar-brand-icon">
                     <i class="fas fa-hospital"></i>   
                 </div>
@@ -116,7 +116,7 @@
                 <div id="collapseCitas" class="collapse" aria-labelledby="headingCitas" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gestión de Citas:</h6>
-                        <a class="collapse-item" href="@Url.Action("ListadoCitas", "Cita")">Ver Citas</a>
+                        <a class="collapse-item" href="@Url.Action("ListadoCitas", "Recepcionista")">Ver Citas</a>
                         <a class="collapse-item" href="cards.html">Agendar Cita</a>
                     </div>
                 </div>
