Recepcionists Views were added with relations to medic

--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -82,8 +82,8 @@
                 <div id="collapseMedicos" class="collapse" aria-labelledby="headingMedicos" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gestión de Médicos:</h6>
-                        <a class="collapse-item" href="buttons.html">Ver Médicos</a>
-                        <a class="collapse-item" href="cards.html">Agregar Médico</a>
+                        <a class="collapse-item" href="@Url.Action("listarMedicos", "Recepcionista")">Ver Médicos</a>
+                        <a class="collapse-item" href="@Url.Action("NuevoMedico", "Recepcionista")">Agregar Médico</a>
                     </div>
                 </div>
             </li>
