--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -63,8 +63,8 @@
                 <div id="collapsePaciente" class="collapse" aria-labelledby="headingPacientes" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gestión de Pacientes:</h6>
-                        <a class="collapse-item" href="buttons.html">Ver Pacientes</a>
-                        <a class="collapse-item" href="cards.html">Agregar Paciente</a>
+                        <a class="collapse-item" href="@Url.Action("listarPacientes", "Recepcionista")">Ver Pacientes</a>
+                        <a class="collapse-item" href="@Url.Action("NuevoPaciente", "Recepcionista")">Agregar Paciente</a>
                     </div>
                 </div>
             </li>
