--- a/ClinicaWebApp/Views/Cita/ListadoCitas.cshtml
+++ b/ClinicaWebApp/Views/Cita/ListadoCitas.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<a class="btn btn-primary mb-2" asp-action="nuevaCita">Crear Cita</a>
+<a class="btn btn-primary mb-2" asp-controller="Pago" asp-action="Crear">Crear Cita</a>
 <h3 class="mb-4">Buscar por Fecha</h3>
 <div class="d-flex flex-row">
     <form method="get" asp-action="ListadoCitas" class="d-flex align-items-center" style="max-width: 600px; width: 100%;">
