--- a/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
+++ b/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
@@ -37,12 +37,12 @@
                 @* <input asp-for="IdPaciente" class="form-control" /> *@
                 @Html.DropDownListFor(model => model.IdPaciente,
                          (SelectList)ViewBag.pacientes, "(Seleccione el Paciente)",
-                         new { @class = "form-select custom-select", @id = "selMed" })
+                         new { @class = "form-select custom-select", @id = "selPac" })
                 <span asp-validation-for="IdPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdPago" class="control-label"></label>
-                <input asp-for="IdPago" class="form-control" />
+                <input asp-for="IdPago" class="form-control" disabled/>
                 <span asp-validation-for="IdPago" class="text-danger"></span>
             </div>
             <div class="form-group">
