Added List Methods in PagosController (WebApp)

--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -101,8 +101,7 @@
                 <div id="collapseCitas" class="collapse" aria-labelledby="headingCitas" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gestión de Citas:</h6>
-                        <a class="collapse-item" href="@Url.Action("ListadoCitas", "Recepcionista")">Ver Citas</a>
-                        <a class="collapse-item" href="cards.html">Agendar Cita</a>
+                        <a class="collapse-item" href="@Url.Action("ListadoCitas", "Cita")">Ver Citas</a>
                     </div>
                 </div>
             </li>
