--- a/ClinicaWebApp/Views/Shared/_LayoutPaciente.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutPaciente.cshtml
@@ -68,7 +68,7 @@
             <div class="sidebar-heading">Gestión de Pagos:</div>
 
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("listaMisPagos","Recepcionista")">
+                <a class="nav-link" href="@Url.Action("PagosPaciente","Pago")">
                     <i class="fas fa-fw fa-credit-card"></i>
                     <span>Mis Pagos</span>
                 </a>
