--- a/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Shared/_LayoutRecepcionista.cshtml
@@ -119,7 +119,7 @@
                 <div id="collapsePagos" class="collapse" aria-labelledby="headingPagos" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Gestión de Pagos:</h6>
-                        <a class="collapse-item" href="buttons.html">Ver Pagos Realizados</a>
+                        <a class="collapse-item" href="@Url.Action("PagosRecepcionista", "Pago")">Ver Pagos Realizados</a>
                         <a class="collapse-item" href="cards.html">Métodos de Pago</a>
                     </div>
                 </div>
