--- a/ClinicaWebApp/Views/Pago/PagosPaciente.cshtml
+++ b/ClinicaWebApp/Views/Pago/PagosPaciente.cshtml
@@ -5,62 +5,65 @@
     Layout = "~/Views/Shared/_LayoutPaciente.cshtml";
 }
 
-<h1>PagosPaciente</h1>
+<h1>Pagos</h1>
+<hr>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IdPago)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoraPago)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MontoPago)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipoPago)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NombrePaciente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CorreoPaciente)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdPago)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoraPago)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MontoPago)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoPago)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NombrePaciente)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CorreoPaciente)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card shadow mb-4">
+
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Pagos Registrados</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IdPago)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.HoraPago)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.MontoPago)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.TipoPago)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NombrePaciente)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CorreoPaciente)
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.IdPago)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HoraPago)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MontoPago)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TipoPago)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NombrePaciente)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CorreoPaciente)
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
