--- a/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
@@ -6,76 +6,86 @@
 }
 
 <h1>Médicos</h1>
+<hr>
 
 <p>
     <a asp-action="TODO:">Exportar registros a PDF</a>
 </p>
 
-<table class="table">
-    <thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IdMedico)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.sueldo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.especialidad)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NombreUsuario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ApellidoUsuario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaNacimiento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TipoDocumento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumeroDocumento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rol)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdMedico)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.sueldo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.especialidad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NombreUsuario)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ApellidoUsuario)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaNacimiento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoDocumento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumeroDocumento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rol)
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="card shadow mb-4">
+
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Médicos Registrados</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IdMedico)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.sueldo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.especialidad)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NombreUsuario)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ApellidoUsuario)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FechaNacimiento)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.TipoDocumento)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumeroDocumento)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Rol)
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.IdMedico)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.sueldo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.especialidad)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NombreUsuario)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApellidoUsuario)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FechaNacimiento)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TipoDocumento)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumeroDocumento)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Rol)
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
