--- a/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
+++ b/ClinicaWebApp/Views/Cita/nuevaCita.cshtml
@@ -34,15 +34,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdPaciente" class="control-label"></label>
-                @* <input asp-for="IdPaciente" class="form-control" /> *@
-                @Html.DropDownListFor(model => model.IdPaciente,
+                <input asp-for="IdPaciente" class="form-control" readonly/>
+                @* @Html.DropDownListFor(model => model.IdPaciente,
                          (SelectList)ViewBag.pacientes, "(Seleccione el Paciente)",
-                         new { @class = "form-select custom-select", @id = "selPac" })
+                         new { @class = "form-select custom-select", @id = "selPac" }) *@
                 <span asp-validation-for="IdPaciente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdPago" class="control-label"></label>
-                <input asp-for="IdPago" class="form-control" disabled/>
+                <input asp-for="IdPago" class="form-control" readonly/>
                 <span asp-validation-for="IdPago" class="text-danger"></span>
             </div>
             <div class="form-group">
