Added Rotativa Starter

--- a/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/listarMedicos.cshtml
@@ -9,7 +9,7 @@
 <hr>
 
 <p>
-    <a asp-action="TODO:">Exportar registros a PDF</a>
+    <a asp-action="listarMedicosPDF">Exportar registros a PDF</a>
 </p>
 
 <div class="card shadow mb-4">
