generando comprobante PDF de detalle cita

--- a/ClinicaWebApp/Views/Cita/DetalleCita.cshtml
+++ b/ClinicaWebApp/Views/Cita/DetalleCita.cshtml
@@ -54,7 +54,7 @@
         <i class="fas fa-arrow-left"></i> Regresar
     </a>
 
-    <a asp-action="ExportarCitaPDF" asp-route-id="@Model.IdCita" class="btn btn-danger">
+    <a asp-action="GenerarDetalleCitaPDF" asp-route-id="@Model.IdCita" class="btn btn-danger">
         <i class="fas fa-file-pdf"></i> Exportar a PDF
     </a>
 </div>
