Completed Export Pacients to PDF view

--- a/ClinicaWebApp/Views/Recepcionista/listarPacientes.cshtml
+++ b/ClinicaWebApp/Views/Recepcionista/listarPacientes.cshtml
@@ -8,6 +8,10 @@
 <h1>Pacientes</h1>
 <hr/>
 
+<p>
+    <a asp-action="listarPacientesPDF">Exportar registros a PDF</a>
+</p>
+
 <div class="card shadow mb-4">
 
     <div class="card-header py-3">
