--- a/ClinicaWebApp/Views/Pago/PagosPaciente.cshtml
+++ b/ClinicaWebApp/Views/Pago/PagosPaciente.cshtml
@@ -36,6 +36,9 @@
                     <th>
                         @Html.DisplayNameFor(model => model.CorreoPaciente)
                     </th>
+                    <th>
+                        ACCIONES
+                    </th>
                 </tr>
                 </thead>
                 <tbody>
@@ -59,6 +62,11 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CorreoPaciente)
+                        </td>
+                        <td>
+                            <a href="@Url.Action("DetallePago", "Pago",  new { id = item.IdPago })" class="btn btn-info me-2">
+                                <i class="fas fa-info-circle"></i>
+                            </a>
                         </td>
                     </tr>
                 }
