vistas de ver detalles para paciente y pago para recepcionista

--- a/ClinicaWebApp/Views/Pago/PagosRecepcionista.cshtml
+++ b/ClinicaWebApp/Views/Pago/PagosRecepcionista.cshtml
@@ -60,6 +60,13 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.CorreoPaciente)
                         </td>
+                            <td>
+                                <a class="btn btn-info me-2"
+                                   href="@Url.Action("DetallePago", "Pago",
+                                         new { id = item.IdPago })">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </td>
                     </tr>
                 }
                 </tbody>
