--- a/ClinicaWebApp/Views/Pago/DetallePago.cshtml
+++ b/ClinicaWebApp/Views/Pago/DetallePago.cshtml
@@ -2,54 +2,82 @@
 
 @{
     ViewData["Title"] = "DetallePago";
-    Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
+    //TODO: Agregar metodo de recepcionista
+    var recepcionistaId = Context.Session.GetInt32("RecepcionistaId");
+    var pacienteId = Context.Session.GetInt32("PacienteId");
+
+    if (pacienteId != null && pacienteId != 0)
+    {
+        Layout = "~/Views/Shared/_LayoutPaciente.cshtml";
+    }
+
+    else if (recepcionistaId != null && recepcionistaId != 0)
+    {
+        Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
+    }
 }
 
-<h1>DetallePago</h1>
+<h1>Detalle de Pago</h1>
 
 <div>
-    <h4>Pago</h4>
-    <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdPago)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdPago)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.HoraPago)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HoraPago)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MontoPago)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MontoPago)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TipoPago)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TipoPago)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NombrePaciente)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NombrePaciente)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CorreoPaciente)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CorreoPaciente)
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+<div class="mt-4">
+    @{
+        if (pacienteId != null && pacienteId != 0)
+        {
+            <a asp-controller="Pago" asp-action="PagosPaciente"
+               class="btn btn-secondary me-2">
+                <i class="fas fa-arrow-left"></i> Regresar
+            </a>
+        }
+        else if (recepcionistaId != null && recepcionistaId != 0)
+        {
+            <a asp-controller="" asp-action="" asp-route-ide_usr="@recepcionistaId"
+               class="btn btn-secondary me-2">
+                <i class="fas fa-arrow-left"></i> Regresar
+            </a>
+        }
+    }
+
+    <a asp-action="DetallePagoPDF" asp-route-id="@Model.IdPago" class="btn btn-danger">
+        <i class="fas fa-file-pdf"></i> Exportar a PDF
+    </a>
 </div>
