--- a/ClinicaWebApp/Views/Paciente/DetallePaciente.cshtml
+++ b/ClinicaWebApp/Views/Paciente/DetallePaciente.cshtml
@@ -2,60 +2,87 @@
 
 @{
     ViewData["Title"] = "DetallePaciente";
-    Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
+    var recepcionistaId = Context.Session.GetInt32("RecepcionistaId");
+    var medicoId = Context.Session.GetInt32("MedicoId");
+
+    if (medicoId != null && medicoId != 0)
+    {
+        Layout = "~/Views/Shared/_LayoutMedico.cshtml";
+    }
+
+    else if (recepcionistaId != null && recepcionistaId != 0)
+    {
+        Layout = "~/Views/Shared/_LayoutRecepcionista.cshtml";
+    }
 }
 
-<h1>DetallePaciente</h1>
+<h1>Detalle de Paciente</h1>
 
 <div>
-    <h4>Paciente</h4>
-    <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdPaciente)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdPaciente)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NombreUsuario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NombreUsuario)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ApellidoUsuario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ApellidoUsuario)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaNacimiento)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaNacimiento)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TipoDocumento)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TipoDocumento)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NumeroDocumento)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NumeroDocumento)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rol)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rol)
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+<div class="mt-4">
+    @{
+        if (recepcionistaId != null && recepcionistaId != 0)
+        {
+            <a asp-controller="Paciente" asp-action="" asp-route-ide_usr=""
+               class="btn btn-secondary me-2">
+                <i class="fas fa-arrow-left"></i> Regresar
+            </a>
+        }
+        else if (medicoId != null && medicoId != 0)
+        {
+            <a asp-controller="Medico" asp-action="listaCitaPorMedicos" asp-route-ide_usr="@medicoId"
+               class="btn btn-secondary me-2">
+                <i class="fas fa-arrow-left"></i> Regresar
+            </a>
+        }
+    }
+
+    <a asp-action="DetallePacientePDF" asp-route-id="@Model.IdPaciente" class="btn btn-danger">
+        <i class="fas fa-file-pdf"></i> Exportar a PDF
+    </a>
 </div>
